src/test/ui/suggestions/suggest-closure-return-type-2.stderr
error[E0282]: type annotations needed for the closure `fn() -> [_; 0]`
  --> $DIR/suggest-closure-return-type-2.rs:2:19
   |
LL |     let _v = || { [] };
   |                   ^^ cannot infer type
   |
help: give this closure an explicit return type without `_` placeholders
   |
LL |     let _v = || -> [_; 0] { [] };
   |                 ^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
